lemma creation fix, crawling task fix